# Multi-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: AGENTS.md
docs/: UnityMcpBridge_v2.cs  architecture.md  unity_mcp_guide.md
extensions/unity/: Unity MCP Bridge 등록 및 사용 가이드.md  UnityMcpBridge.cs  unity_visual_automation_guide.md
src/multi_mcp/: main.py
src/multi_mcp/adapters/: __init__.py  artifact.py  exec.py  filesystem.py  logs.py  search.py  ssh.py  unity.py
src/multi_mcp/enforcement/: middleware.py
src/multi_mcp/gui/: api.py  mcp_endpoint.py
src/multi_mcp/gui/templates/: index.html
src/multi_mcp/hub/: discovery.py  factory.py  router.py
src/multi_mcp/logging/: audit.py  execution.py
src/multi_mcp/models/: bootstrap.py  config.py  secrets.py  settings_manager.py
