[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-mcp"
version = "0.1.0"
authors = [
  { name="Manus AI" },
]
description = "A Multi-MCP server that acts as a hub/router for various sub-servers, with a focus on security, policy enforcement, and a GUI for management."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "cryptography>=42.0.5",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pytomlpp>=1.0.13"
]

[project.urls]
"Homepage" = "https://github.com/manbavaran/Multi-MCP"
"Issues" = "https://github.com/manbavaran/Multi-MCP/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
